--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </nav>
       
-    <div class="container" style="margin-top:45px">
+    <div class="container" id="containerMaster" style="margin-top:45px; display:none">
         <div class="row">
             <div class="col-sm-4" align="center">
                 <label>Logradouro</label>
