--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
             </form>
         </div>
     </nav>
-      
+
+    <div class="text-center" id="loading" style="margin-top:45px; display:none">
+        <img src="img/loading.gif" class="rounded" alt="...">
+    </div>
+
     <div class="container" id="containerMaster" style="margin-top:45px; display:none">
         <div class="row">
             <div class="col-sm-4" align="center">
